--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,9 @@
   "dependencies": {
     "@ertan95/react-native-document-scanner": "^2.1.6",
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-firebase/app": "^20.3.0",
+    "@react-native-firebase/auth": "^20.3.0",
     "@react-navigation/native": "^6.0.2",
     "expo": "~51.0.16",
     "expo-constants": "~16.0.2",
@@ -27,9 +30,10 @@
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.6",
     "expo-web-browser": "~13.0.3",
+    "firebase": "^9.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.74.2",
+    "react-native": "0.74.3",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-permissions": "^4.1.5",
     "react-native-reanimated": "~3.10.1",
