--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "@react-native-firebase/app": "^20.3.0",
     "@react-native-firebase/auth": "^20.3.0",
     "@react-navigation/native": "^6.0.2",
+    "axios": "^1.7.3",
     "expo": "~51.0.16",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.7",
