--- a/frontend/app.json
+++ b/frontend/app.json
@@ -18,8 +18,8 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/images/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
+        "foregroundImage": "./assets/images/adaptive-icon.png"
+        // "backgroundColor": "#ffffff"
       },
       "package": "com.anonymous.frontend"
     },
