--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,10 +32,13 @@
     "expo-system-ui": "~3.0.6",
     "expo-web-browser": "~13.0.3",
     "firebase": "^9.0.0",
+    "lottie-ios": "^4.5.0",
+    "lottie-react-native": "^6.7.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.3",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-modal": "^13.0.1",
     "react-native-permissions": "^4.1.5",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
