--- a/backend/functions/package.json
+++ b/backend/functions/package.json
@@ -23,14 +23,17 @@
   "dependencies": {
     "@google-cloud/firestore": "^7.9.0",
     "@google-cloud/vision": "^4.3.0",
+    "@smodin/fast-text-language-detection": "^0.2.3",
     "busboy": "^1.6.0",
     "firebase": "^10.12.5",
     "firebase-admin": "^12.3.1",
     "firebase-functions": "^5.0.1",
+    "langdetect": "^0.2.1",
     "module-alias": "^2.2.3"
   },
   "devDependencies": {
     "@types/busboy": "^1.5.4",
+    "@types/langdetect": "^0.2.2",
     "@types/module-alias": "^2.0.4",
     "@types/node": "^22.1.0",
     "typescript": "^5.5.4"
