--- a/backend/functions/package.json
+++ b/backend/functions/package.json
@@ -36,7 +36,13 @@
     "@types/busboy": "^1.5.4",
     "@types/langdetect": "^0.2.2",
     "@types/module-alias": "^2.0.4",
-    "@types/node": "^22.1.0",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-prettier": "^5.2.1",
+    "prettier": "^3.3.3",
     "typescript": "^5.5.4"
   }
 }
