--- a/backend/functions/tsconfig.json
+++ b/backend/functions/tsconfig.json
@@ -2,13 +2,12 @@
   "compilerOptions": {
     "module": "commonjs",
     "noImplicitReturns": true,
-    // "noUnusedLocals": true,
+    "noUnusedLocals": true,
     "outDir": "dist",
     "sourceMap": true,
     "strict": true,
     "target": "es2017",
     "esModuleInterop": true,
-    "moduleResolution": "node",
     "baseUrl": "./src",
     "paths": {
       "@/*": ["./*"]
