--- a/backend/functions/package.json
+++ b/backend/functions/package.json
@@ -29,10 +29,11 @@
     "firebase": "^10.13.1",
     "firebase-admin": "^12.3.1",
     "firebase-functions": "^5.0.1",
-    "langdetect": "^0.2.1",
     "jimp": "^0.22.10",
     "jsqr": "1.4.0",
-    "module-alias": "^2.2.3"
+    "langdetect": "^0.2.1",
+    "module-alias": "^2.2.3",
+    "qrcode-reader": "^1.0.4"
   },
   "devDependencies": {
     "@types/busboy": "^1.5.4",
