--- a/frontend/app.json
+++ b/frontend/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "frontend",
+    "name": "REDI",
     "slug": "frontend",
     "version": "1.0.0",
     "orientation": "portrait",
@@ -18,7 +18,7 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/images/adaptive-icon.png"
+        "foregroundImage": "./assets/images/icon.png"
       },
       "package": "com.anonymous.redimobile"
     },
