--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.7",
     "expo-linking": "~6.3.1",
+    "expo-permissions": "^14.4.0",
     "expo-router": "~3.5.17",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
@@ -37,7 +38,6 @@
     "react-native": "0.74.3",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-modal": "^13.0.1",
-    "react-native-permissions": "^4.1.5",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
