--- a/frontend/eas.json
+++ b/frontend/eas.json
@@ -8,6 +8,12 @@
       "developmentClient": true,
       "distribution": "internal"
     },
+    "development-sim": {
+      "distribution": "internal",
+      "ios": {
+        "simulator": true
+      }
+    },
     "preview": {
       "distribution": "internal",
       "android": {
