test: add e2e tests

--- a/frontend/maestro/scanner/scanner-document.yaml
+++ b/frontend/maestro/scanner/scanner-document.yaml
@@ -3,4 +3,6 @@ appId: com.anonymous.redimobile
 - launchApp:
     clearState: true
 
-- assertVisible: "Open up App.js to start working on your app!"
+- runFlow: ../login/login-valido.yaml
+
+- tapOn: Scanner
