--- a/backend/functions/package.json
+++ b/backend/functions/package.json
@@ -37,6 +37,7 @@
   },
   "devDependencies": {
     "@types/busboy": "^1.5.4",
+    "@types/jest": "^29.5.14",
     "@types/langdetect": "^0.2.2",
     "@types/module-alias": "^2.0.4",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
@@ -45,7 +46,9 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-prettier": "^5.2.1",
+    "jest": "^29.7.0",
     "prettier": "^3.3.3",
+    "ts-jest": "^29.2.5",
     "typescript": "^5.5.4"
   }
 }
